添加圣洁与邪恶伤害，与天使与恶魔值的影响计算

--- a/config/probe-settings.json
+++ b/config/probe-settings.json
@@ -1,6 +1,6 @@
 {
     "probejs.modHash": 2125522346341911028,
-    "probejs.registryHash": -4126667503121131993,
+    "probejs.registryHash": 6101555045811880314,
     "probejs.enabled": true,
     "probejs.isolatedScope": false
 }
