--- a/config/probe-settings.json
+++ b/config/probe-settings.json
@@ -1,6 +1,6 @@
 {
-    "probejs.modHash": 4437585910862134491,
-    "probejs.registryHash": 6101555045811880314,
+    "probejs.modHash": -3708245852623659884,
+    "probejs.registryHash": -7864961743732645437,
     "probejs.enabled": true,
     "probejs.isolatedScope": false
 }
