来点黑魔法

--- a/config/probe-settings.json
+++ b/config/probe-settings.json
@@ -1,5 +1,5 @@
 {
-    "probejs.modHash": -3708245852623659884,
+    "probejs.modHash": 7486287864316498910,
     "probejs.registryHash": -7864961743732645437,
     "probejs.enabled": true,
     "probejs.isolatedScope": false
