--- a/config/probe-settings.json
+++ b/config/probe-settings.json
@@ -1,5 +1,5 @@
 {
-    "probejs.modHash": -8403376847382427484,
+    "probejs.modHash": 3090158657787079978,
     "probejs.registryHash": -7864961743732645437,
     "probejs.enabled": true,
     "probejs.isolatedScope": false
